WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159523
Modern IDB: When IDBDatabase objects are garbage collected, they don't close their server connection
https://bugs.webkit.org/show_bug.cgi?id=159523
Summary
Modern IDB: When IDBDatabase objects are garbage collected, they don't close ...
Brady Eidson
Reported
2016-07-07 14:14:33 PDT
Modern IDB: When IDBDatabase objects are garbage collected, they don't close their server connection
Attachments
Patch
(9.97 KB, patch)
2016-07-07 14:22 PDT
,
Brady Eidson
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-07-07 14:15:12 PDT
<
rdar://problem/25910345
>
Brady Eidson
Comment 2
2016-07-07 14:22:37 PDT
Created
attachment 283049
[details]
Patch
Brady Eidson
Comment 3
2016-07-07 14:52:17 PDT
https://trac.webkit.org/changeset/202935
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug