Modern IDB: When IDBDatabase objects are garbage collected, they don't close their server connection. <rdar://problem/25910345> and https://bugs.webkit.org/show_bug.cgi?id=159523

Reviewed by Alex Christensen.

Source/WebCore:

Tests: storage/indexeddb/modern/gc-closes-database-private.html
       storage/indexeddb/modern/gc-closes-database.html

* Modules/indexeddb/IDBDatabase.cpp:
(WebCore::IDBDatabase::IDBDatabase): New logging.
(WebCore::IDBDatabase::~IDBDatabase): Close server connection.
(WebCore::IDBDatabase::fireVersionChangeEvent): New logging.
(WebCore::IDBDatabase::dispatchEvent): New logging.

* Modules/indexeddb/client/IDBConnectionToServer.cpp:
(WebCore::IDBClient::IDBConnectionToServer::openDatabase): New logging.

LayoutTests:

* storage/indexeddb/modern/gc-closes-database-expected.txt: Added.
* storage/indexeddb/modern/gc-closes-database-private-expected.txt: Added.
* storage/indexeddb/modern/gc-closes-database-private.html: Added.
* storage/indexeddb/modern/gc-closes-database.html: Added.
* storage/indexeddb/modern/resources/gc-closes-database.js: Added.

Canonical link: https://commits.webkit.org/177660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202935 268f45cc-cd09-0410-ab3c-d52691b4dbfc